[project]
name = "nav2py_height_crowdnav_controller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.8.*"
dependencies = [
    "pyyaml",
    "torch",
    "torchvision",
    "numpy==1.23.*",
    "matplotlib",
    "scipy",
    "Cython",
    "gym",
    "baselines==0.1.5",
    "opencv-python"
]
