[project]
name = "nav2py_height_crowdnav_controller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.8.*"
dependencies = [
    "pyyaml",
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.1.2%2Bcpu-cp38-cp38-linux_x86_64.whl",
    "torchvision",
    "numpy==1.23.*",
    "matplotlib",
    "scipy",
    "Cython",
    "gym",
    "baselines==0.1.5",
    "opencv-python"
]
